# Obsidian_skills

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml  requirements.txt
.opencode/agents/: note-attach.md  notedrift.md
.opencode/commands/: notetaker-off.md  notetaker-on.md  notetaker-status.md
.opencode/plugins/: obsidian_note_logger.ts
.opencode/skills/init-new-moc/: SKILL.md
.opencode/skills/note-attach/: SKILL.md
.opencode/skills/notedrift/: SKILL.md
.opencode/tools/: obsidian_note_writer.py
.opencode/tools/Modelfiles/: notedrift.Modelfile  notetaker.Modelfile
docs/: OMNISEARCH_TOOL.md  omnisearch.md
docs/archive/obsidian-rest-api/: SKILL.md
docs/archive/obsidian-rest-api/references/: examples.md
docs/rest-api-integration/: api_reference.md  mcp_research.md
docs/superpowers/plans/: 2026-04-07-obsidian-cli-redesign.md  2026-04-08-obsidian-note-logger.md  2026-04-12-multi-note-reasoning-chains.md
docs/superpowers/specs/: 2026-04-08-obsidian-note-logger-design.md
obsidian-cli/: SKILL.md
obsidian-cli/references/: cli_reference.md  setup.md
obsidian-dev-notes/: SKILL.md
obsidian-dev-notes/references/: karpathy-ingest.md
obsidian-rest-api/references/: api_endpoints.md  authentication.md  mcp_research.md
tools/: obsidian.ts  omnisearch.ts
